# ChampSim

./: .gitignore  .gitmodules  Makefile  README.md  analysis.ipynb  champsim.sh  gaps-analysis.ipynb  generate_binaries.sh  lcf-analysis.ipynb  local_champsim.sh  remote_champsim.sh  run.sh  spec-analysis.ipynb
analysis/: data.ipynb  stats.py
config/: modules.py  parse.py
configs/: ISCA_Entangling_4Ke.json  ISCA_Entangling_4Ke_config.json  ISCA_Entangling_4Ke_opt_bb_split.json  ISCA_Entangling_4Ke_opt_bb_split_config.json  ampm_l2c.json  barsa.json  barsa_config.json  berti.json  berti_config.json  berti_l1d.json  bingo_l2c.json  bip.json  bip_config.json  bop.json  bop_l2c.json  champsim_config.json  djolt.json  djolt_config.json  drrip.json  dspatch_l2c.json  epi.json  epi_config.json  fnlmma.json  fnlmma_config.json  fnlmma_new.json  fnlmma_new_config.json  ip_stride_l1d.json  ip_stride_l2c.json  ip_stride_llc.json  ipcp.json  ipcp_config.json  ipcp_l1d.json  ipcp_l2c.json  lru.json  mana.json  mana_config.json  mlop_l2c.json  mockingjay.json  next_line.json  next_line_config.json  (+23 more)
develop/: Address-operations.html  Bandwidth.html  Byte-sizes.html  Cache-model.html  Configuration-API.html  Core-model.html  Creating-a-configuration-file.html  Legacy-modules.html  Module-support-library.html  Modules.html  Publications-using-champsim.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
inc/: bakshalipour_framework.h  bitmap.h  block.h  cache.h  champsim.h  (+12 more)
tracer/dynamorio/: CMakeLists.txt  README.md  champsim_tracer_dr.cpp
(+139 files in other folders)
